--- a/etc/NEWS
+++ b/etc/NEWS
@@ -40,6 +40,12 @@ Speech-enable the elisp side of Emacs Application Framework
 Emacspeak no longer depends on tapestry.el  which was cloned from the
 ~vm~ package over 20+ years ago.
 Key _C-e M-t_ now runs an equivalent command that does not depend on tapestry.
+** External Browsers From EWW
+
+You can now launch Chrome with _c_ and Emacs Application
+Framework(EAF)'s embedded blink-based WebView with _j_ in EWW buffers.
+
+in EWW 
 
 ** Incorporate Awesome RSS
 
