--- a/info/.spell.tex
+++ b/info/.spell.tex
@@ -97,6 +97,7 @@ coord
 cp
 cperl
 CPerl
+Cricinfo
 csv
 ctl
 CTL
@@ -600,7 +601,6 @@ WEBSPACE
 Webspaces
 Wecker
 whitespace
-widnow
 WikiData
 windmove
 winring
