--- a/info/inc-turning-twenty.texi
+++ b/info/inc-turning-twenty.texi
@@ -436,7 +436,7 @@ affordances for working with two-dimensional data.
 @subsection Speech-Enabling Interactive Games
 
 So in 1997, I went the next step in asking  ---  given access to the
-underlying infromation, is it possible to build effective
+underlying information, is it possible to build effective
 eyes-free interaction to highly interactive tasks? I picked
 @strong{Tetris} as a means of exploring this space, the result was an
 Emacspeak extension to speech-enable module @strong{tetris.el}. The
@@ -452,7 +452,7 @@ user interface layer that formed part of the
 Speech-enabling games for effective eyes-free interaction has
 proven highly educational. Interactive games are typically built
 to challenge the user, and if the eyes-free interface is
-inefficient, you just wont play the game  ---  contrast this with a
+inefficient, you just won't play the game  ---  contrast this with a
 task that you @strong{must} perform, where you're likely to make do with
 a sub-optimal interface. Over the years, Emacspeak has come to
 include eyes-free interfaces to several games including @url{http://en.wikipedia.org/wiki/Tetris,Tetris},
@@ -567,8 +567,8 @@ interface seamlessly with others in the technical domain. IPython
 Notebooks provide an easy means of reaching a large audience when
 publishing technical material with interactive computational
 content; module @strong{ein} brings the power and convenience of Emacs '
-editting facilities when developing the content. Speech-enabling
-package @strong{ein} is a major win since editting program source code
+editing facilities when developing the content. Speech-enabling
+package @strong{ein} is a major win since editing program source code
 in an eyes-free environment is far smoother in Emacs than in a
 browser-based editor.
 
