--- a/info/ems-interactive-p.org
+++ b/info/ems-interactive-p.org
@@ -86,7 +86,7 @@ If this test returns _T_, we memoize the result and return it.
 
 Next, we advice function _call-interactively_ to check if the function
 being called interactively is one of the functions that has been
-adviced by Emacspeak. If so, we record the fact in the previously
+advised by Emacspeak. If so, we record the fact in the previously
 declared global flag _ems-called-interactively-p_.
 
 
@@ -102,7 +102,7 @@ on the function being called."
 
 We define an equivalent advice form on function
 _funcall-interactively_ as well. Now, whenever any function that has
-been adviced by Emacspeak is called interactively, that interactive
+been advised by Emacspeak is called interactively, that interactive
 call gets recorded in the global flag. In the custom Emacspeak
 predicate we define, we check the value of this flag, and if
 set, consume it, i.e. unset the flag and return _T_.
@@ -138,7 +138,7 @@ advantage of working correctly for Emacspeak's specific use-case.
 
 User presses _C-n_ or _[down]_ to move to the next line ---
 this is an interactive call to function _next-line_.
-Function _next-line_ is adviced by Emacspeak, that advice form contains:
+Function _next-line_ is advised by Emacspeak, that advice form contains:
 
 : (when (ems-interactive-p) ...)
 
@@ -148,7 +148,7 @@ return _t_ in this case.
   1. Pressing _C-n_ first calls _call-interactively_ with _next-line_ as
    the function to call.
   2. The advice on _call-interactively_ first checks
-   if  _next-line_ has been adviced by Emacspeak ---
+   if  _next-line_ has been advised by Emacspeak ---
      _(ems-record-interactive-p (ad-get-arg 0))_ --- in this example,
      _(ad-get-arg 0)_ returns _next-line_.
   3. Predicate _ems-record-interactive-p_  returns _t_ after setting
@@ -168,7 +168,7 @@ return _t_ in this case.
      --- since that is the function that the advice system calls. This
      matches the value bound to _caller-advice_ which is the precise
      test we need to verify that the advice form is being evaluated in
-     the context of an interactive call to our adviced function.
+     the context of an interactive call to our advised function.
   
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
 #+OPTIONS: author:t broken-links:nil c:nil creator:nil
