--- a/info/docs.texi
+++ b/info/docs.texi
@@ -132,7 +132,7 @@ This chapter documents a total of 1146 commands and 146 options.
 * emacspeak-midge::Speech-enable MIDI editor.
 * emacspeak-mines::Speech-enable MINES.
 * emacspeak-mspools::Speech enable MSpools -- Monitor multiple mail drops.
-* emacspeak-muggles::Convenience Hydras For The Emacspeak Desktop.
+* emacspeak-muggles::Convenience Hydras.
 * emacspeak-muse::Speech-enable Muse.
 * emacspeak-navi-mode::Speech-enable NAVI-MODE.
 * emacspeak-net-utils::Speech enable net-utils.
@@ -8957,7 +8957,7 @@ The heads for the associated hydra are:
 "p":    ‘emacspeak-muggles-lispy-or-sp’,
 "t":    ‘(call-interactively #’toggle-truncate-lines)’,
 "u":    ‘(call-interactively #’ido-ubiquitous-mode)’,
-"q":    ‘nil’
+"q":    nil
 
 The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
 @end format
@@ -12675,7 +12675,8 @@ T               emacspeak-table-goto-top
 
 The next two commands let you search the table.
 The commands ask you if you want to search rows or columns.
-When searching headers remember that row 0 is the column header, and that column 0 is the row header.
+When searching headers remember that row 0 is the column header,
+and that column 0 is the row header.
 
 h               emacspeak-table-search-headers
 s               emacspeak-table-search
@@ -17095,7 +17096,7 @@ The heads for the associated hydra are:
 "?":    ‘Info-summary’,
 "h":    ‘Info-help’,
 "q":    ‘quit-window’,
-"C-g":    ‘nil’
+"C-g":    nil
 
 The body can be accessed via ‘emacspeak-muggles-info-summary/body’.
 @end format
@@ -17208,7 +17209,7 @@ The heads for the associated hydra are:
 "p":    ‘outline-previous-visible-heading’,
 "f":    ‘outline-forward-same-level’,
 "b":    ‘outline-backward-same-level’,
-"z":    ‘nil’
+"z":    nil
 
 The body can be accessed via ‘emacspeak-muggles-outliner/body’.
 @end format
@@ -17302,7 +17303,7 @@ The heads for the associated hydra are:
 ".":    ‘set-mark-command’,
 "/":    ‘View-search-regexp-forward’,
 "<":    ‘beginning-of-buffer’,
-"<return>":    ‘nil’,
+"<return>":    nil,
 "=":    ‘what-line’,
 ">":    ‘end-of-buffer’,
 "@@":    ‘View-back-to-mark’,
@@ -17329,7 +17330,7 @@ The heads for the associated hydra are:
 "m":    ‘point-to-register’,
 "n":    ‘View-search-last-regexp-forward’,
 "p":    ‘View-search-last-regexp-backward’,
-"q":    ‘nil’,
+"q":    nil,
 "r":    ‘copy-to-register’,
 "s":    ‘emacspeak-hydra-toggle-talkative’,
 "t":    ‘(recenter 0)’,
